k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samstore-deploy
  labels:
    app: samstore-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: samstore-pod
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: samstore-pod
    spec:
      containers:
      - name: samstore
        image: mycluster.icp:8500/red/samstore
        ports:
        - containerPort: 8080
          name: tomcat
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 500m
            memory: 1024Mi
          requests:
            cpu: 300m
            memory: 256Mi
