k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: samstore-svc
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: tomcat
  selector:
    app: samstore-pod
