k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: samstore-ing
spec:
  rules:
  - host: petstore.icp4a.com
    http:
      paths:
      - path: /
        backend:
          serviceName: samstore-svc
          servicePort: 80
